# BugSucker

./: .gitignore  CMakeLists.txt
src/Core/: Defines.h  main.cpp
src/Process/: ProcessControl.cpp  ProcessControl.h
